Ensure gradlew is executable

--- a/.github/workflows/jvm.yaml
+++ b/.github/workflows/jvm.yaml
@@ -14,6 +14,9 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Ensure gradlew is executable
+        run: chmod +x gradlew
+
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
 
