Add more files to the distribution zip

--- a/.github/workflows/jvm.yaml
+++ b/.github/workflows/jvm.yaml
@@ -23,9 +23,8 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          arguments: build
+          arguments: distZip --no-daemon
 
       - uses: actions/upload-artifact@v3
         with:
-          name: tnt-jvm
-          path: build/distributions
+          path: build/distributions/*.zip
