--- a/.github/workflows/jvm.yaml
+++ b/.github/workflows/jvm.yaml
@@ -23,8 +23,9 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          arguments: distZip --no-daemon
+          arguments: installDist --no-daemon
 
       - uses: actions/upload-artifact@v3
         with:
-          path: build/distributions/*.zip
+          name: tnt-jvm
+          path: build/install/
