--- a/.github/workflows/jvm.yaml
+++ b/.github/workflows/jvm.yaml
@@ -1,5 +1,9 @@
 name: Build for JVM
-on: [ push ]
+on:
+  push:
+    branches: [ master ]
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
@@ -23,9 +27,15 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          arguments: installDist --no-daemon
+          arguments: installDist distZip --no-daemon
 
       - uses: actions/upload-artifact@v3
         with:
           name: tnt-jvm
           path: build/install/
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: build/distributions/*
